--- a/medici_website/templates/medici_website/index.html
+++ b/medici_website/templates/medici_website/index.html
@@ -1,1 +1,9 @@
 Medici website placeholder
+
+<form enctype="multipart/form-data" method="POST" action="/medici_system/receipt/image">
+    {% csrf_token %} 
+
+    <input type="file" name="image" id="image">
+    <input type="submit" value="Upload Image" name="submit">
+
+</form>
