Add html elements to welcome page

--- a/medici_website/templates/medici_website/index.html
+++ b/medici_website/templates/medici_website/index.html
@@ -1,1 +1,12 @@
-Medici website placeholder
+<!DOCTYPE html>
+<html>
+
+    <head>
+        <title>Medici Assistant</title>
+    </head>
+
+    <body>
+        Hi.
+    </body>
+
+</html>
