Add receipt counter

--- a/medici_website/templates/medici_website/index.html
+++ b/medici_website/templates/medici_website/index.html
@@ -27,7 +27,7 @@
       <p>Lični asistent.<br />Za lične finansije.</p>
     </div>
     <div id="stat">
-      <p>0</p>
+      <p>{{ scanned_receipts_count }}</p>
     </div>
     <div id="desc">
       <p>UKUPAN BROJ SKENIRANIH RAČUNA</p>
